# ion

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  PHASE3_4_STATUS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  clippy.toml  install.sh  x.toml.dump
.github/workflows/: ci.yml  release.yml
docs/: ECOSYSTEM_ARCHITECTURE.md  PUBLISH_API.md
docs/templates/: README.md
docs/templates/github-actions/: README.md  ion-library-ci.yml
src/: config.rs  lockfile.rs  main.rs  manifest.rs
src/analysis/: cfg.rs  dataflow.rs  mod.rs  smart_ptr.rs
src/cmake/: config_gen.rs  generator.rs  mod.rs
src/commands/: add.rs  build.rs  check.rs  clean.rs  init.rs  install.rs  lsp.rs  mod.rs  new.rs  outdated.rs  remove.rs  run.rs  test.rs  tree.rs  update.rs
src/linter/: diagnostic.rs  engine.rs  fixer.rs  mod.rs  reporter.rs  tree.rs  watcher.rs
src/linter/rules/: memory.rs  mod.rs  modern.rs  null.rs  resource.rs
src/lsp/: convert.rs  mod.rs  navigation.rs  server.rs
src/registry/: cache.rs  conan.rs  git.rs  github.rs  ion.rs  local.rs  mod.rs  vcpkg.rs
src/resolver/: graph.rs  mod.rs  semver_utils.rs
