[package]
name = "ionx"
version = "0.3.0"
edition = "2021"
description = "Modern C++ package manager and linter written in Rust"
authors = ["Derek Ogagarue <cybersgenii@gmail.com>"]
license = "MIT"
repository = "https://github.com/cybergenii/ion"
keywords = ["cpp", "package-manager", "linter", "toolchain"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ion"
path = "src/main.rs"

# ── Release profile (smaller + faster binaries) ───────────────────────────────
[profile.release]
opt-level = 3
lto = true           # link-time optimization — smaller binary
codegen-units = 1    # single codegen unit — max optimization
strip = true         # strip debug symbols
panic = "abort"      # no unwinding — reduces binary size

# ── Dependencies ──────────────────────────────────────────────────────────────
[dependencies]
clap        = { version = "4.5", features = ["derive", "color", "suggestions"] }
anyhow      = "1.0"
thiserror   = "1.0"
tokio       = { version = "1.35", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
colored     = "2.1"
indicatif   = { version = "0.17", features = ["tokio"] }
sha2        = "0.10"
walkdir     = "2.4"
chrono      = { version = "0.4", features = ["serde"] }
dirs        = "5.0"
num_cpus    = "1.16"
semver      = { version = "1.0", features = ["serde"] }
futures     = "0.3"
hex         = "0.4"
comfy-table = "7.1"
regex       = "1.10"
tempfile    = "3.8"
async-trait = "0.1"
clang = "2.0"
clang-sys = { version = "1.7", features = ["clang_13_0", "runtime"] }
tree-sitter = "0.22"
tree-sitter-cpp = "0.22"
notify = { version = "6.1", features = ["macos_kqueue"] }
rayon = "1.8"
annotate-snippets = "0.11"
tower-lsp = "0.20"
lsp-types = "0.95"
petgraph = "0.6"

# ── Cross-compile safe: reqwest with rustls (no OpenSSL) ──────────────────────
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# ── Cross-compile safe: pure Rust backends ────────────────────────────────────
# flate2: force Rust backend (default uses C zlib which breaks on musl cross-builds)
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# zip 2.x is fully pure Rust (zip 0.6 had C backend issues)
zip = "2.1"

# tar is pure Rust — no changes needed
tar = "0.4"

[dev-dependencies]

